Quick updates before beta test: update links, solve z-index issue, add feedback links and warning

--- a/sass/_land.sass
+++ b/sass/_land.sass
@@ -85,8 +85,11 @@ $land-padding-bottom: 60px
 	text-transform: uppercase
 
 .land-a
-	color: #fff
-	opacity: 0.7
-	&:hover
+	&,
+	&:visited
+		color: #fff
+		opacity: 0.7
+	&:hover,
+	&:active
 		color: #fff
 		opacity: 1
